--- a/src/pages/mainStyles.module.scss
+++ b/src/pages/mainStyles.module.scss
@@ -47,5 +47,15 @@
   padding-top: 3%;
   align-items: center;
 }
+.block_result_breed{
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  font-size: 22px;
 
+  span{
+    font-weight: 600;
+    color: #9f33c9;
+  }
+}
 
